--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,18 @@
     <title>Cover Letter Manager</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
+	
+	<style>
+/* Move down content because we have a fixed navbar that is 50px tall */
+body {
+  padding-top: 50px;
+  padding-bottom: 20px;
+}
+
+#previewInput {
+  height: 360px;
+}
+	</style>
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -14,9 +26,37 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, world!</h1>
-	
-	<p>Hello...</p>
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Cover Letter Manager</a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="/">Home</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
+
+    <div class="container">
+
+      <h1>Create a cover letter</h1>
+      <form role="form">
+        <div class="form-group">
+          <label for="previewInput">Preview</label>
+          <textarea id="previewInput" class="form-control" placeholder="Cover letter preview"></textarea>
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+	  
+    </div><!-- /.container -->
 
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
