--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
     <title>Cover Letter Manager</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
-	
-	<style>
+
+    <script src="js/knockout.js"></script>
+  	<style>
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
   padding-top: 50px;
@@ -18,7 +19,7 @@ body {
 #previewInput {
   height: 360px;
 }
-	</style>
+    </style>
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -50,6 +51,10 @@ body {
       <h1>Create a cover letter</h1>
       <form role="form">
         <div class="form-group">
+          <label for="">Recipient</label>
+          <input data-bind="value: recipient" type="text" id="recipientInput" class="form-control" placeholder="recipient">
+        </div>
+        <div class="form-group">
           <label for="previewInput">Preview</label>
           <textarea data-bind="text: preview" id="previewInput" class="form-control" placeholder="Cover letter preview"></textarea>
         </div>
@@ -58,12 +63,27 @@ body {
 	  
     </div><!-- /.container -->
 
-    <script src="js/knockout.js"></script>
     <script>
 function CoverLetterViewModel() {
   var that = this;
 
-  that.subject = "Dear Mr.XXX:";
+  that.recipient = ko.observable("");
+
+  that.subject = ko.computed(function() {
+    var recipient = that.recipient();
+
+    if (recipient === "") {
+      return "";
+    }
+
+    var names = recipient.split(" ");
+
+    if (names.length > 1) {
+      names = names.splice(1, names.length);
+    }
+
+    return "Dear Mr. " + names.join(" ") + ":\n\n";
+  });
 
   that.firstPart = "As an experienced and passionate software engineer, I have been practising Java for many years.I have 3 years of professional experience in development, and I am very familiar with JAVA including JEE, Spring, Struts2, Hibernate and JBoss.";
 
@@ -74,7 +94,7 @@ function CoverLetterViewModel() {
   that.signature = "Regards,\nAnthony Garcia-Labiad";
 
   that.preview = ko.computed(function() {
-    return that.subject + "\n\n" + that.firstPart + "\n" + that.quality + "\n" + that.availability + "\n\n" + that.signature;
+    return that.subject() + that.firstPart + "\n" + that.quality + "\n" + that.availability + "\n\n" + that.signature;
   });
 }
 
