--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,10 @@ body {
       <h1>Create a cover letter</h1>
       <form role="form">
         <div class="form-group">
+          <label><input type="radio" value="Mr" data-bind="checked: recipientTitle"> Mr</label>
+          <label><input type="radio" value="Ms" data-bind="checked: recipientTitle"> Ms</label>
+        </div>
+        <div class="form-group">
           <label for="recipientInput">Recipient</label>
           <input data-bind="value: recipient" type="text" id="recipientInput" class="form-control" placeholder="recipient">
         </div>
@@ -71,14 +75,16 @@ body {
 function CoverLetterViewModel() {
   var that = this;
 
+  that.recipientTitle = ko.observable("");
   that.recipient = ko.observable("");
 
   that.jobTitle = ko.observable("software engineer");
 
   that.subject = ko.computed(function() {
+    var recipientTitle = that.recipientTitle();
     var recipient = that.recipient();
 
-    if (recipient === "") {
+    if (recipientTitle === "" || recipient === "") {
       return "";
     }
 
@@ -88,7 +94,7 @@ function CoverLetterViewModel() {
       names = names.splice(1, names.length);
     }
 
-    return "Dear Mr. " + names.join(" ") + ":\n\n";
+    return "Dear " + recipientTitle + ". " + names.join(" ") + ":\n\n";
   });
 
   that.firstPart = ko.computed(function() {
