--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
+    <script src="js/jquery.min.js"></script>
     <script src="js/knockout.js"></script>
   	<style>
 /* Move down content because we have a fixed navbar that is 50px tall */
@@ -50,7 +51,7 @@ body {
 
       <h1>Create a cover letter</h1>
 
-      <form role="form">
+      <form role="form" data-bind="submit: save">
 
         <div class="panel panel-primary">
           <div class="panel-heading">Recipient</div>
@@ -95,8 +96,12 @@ body {
     </div><!-- /.container -->
 
     <script>
+function guid(a,b){for(b=a='';a++<36;b+=a*51&52?(a^15?8^Math.random()*(a^20?16:4):4).toString(16):'-');return b};
+
 function CoverLetterViewModel() {
   var that = this;
+
+  that.guid = guid();
 
   that.recipientTitle = ko.observable("");
   that.recipientName = ko.observable("");
@@ -147,6 +152,21 @@ function CoverLetterViewModel() {
   that.preview = ko.computed(function() {
     return that.recipient() + that.firstPart() + "\n" + that.quality + "\n" + that.availability + "\n\n" + that.signature;
   });
+
+  that.save = function() {
+    $.ajax({
+      type: "PUT",
+      url: "http://127.0.0.1:5984/cover_letter_manager/" + that.guid,
+      contentType: "application/json",
+      dataType: "json",
+      data: ko.toJSON(that)
+    }).done(function(result) {
+      that._rev = result.rev;
+      console.log(result);
+    }).error(function(j,h,r) {
+      console.error(r);
+    });
+  }
 }
 
 ko.applyBindings(new CoverLetterViewModel());
